# ros2_study

ros2_demo_1/install/: local_setup.sh  setup.sh
ros2_demo_1/install/camera_pkg/lib/camera_pkg/: virtual_camera  yolo_recognizer
ros2_demo_1/install/camera_pkg/share/camera_pkg/: local_setup.sh  package.sh
ros2_demo_1/install/can_pkg/lib/can_pkg/: can_simulator  system_monitor
ros2_demo_1/install/can_pkg/share/can_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_demo_1/install/control_pkg/lib/control_pkg/: control_decision  (+1 more)
ros2_demo_1/log/: latest_build
ros2_demo_1/src/camera_pkg/: CMakeLists.txt
ros2_demo_1/src/camera_pkg/src/: virtual_camera.cpp  yolo_recognizer.cpp
ros2_demo_1/src/can_pkg/: CMakeLists.txt  package.xml
ros2_demo_1/src/can_pkg/src/: can_simulator.cpp  system_monitor.cpp
ros2_demo_1/src/control_pkg/: CMakeLists.txt
ros2_demo_1/src/control_pkg/src/: control_decision.cpp  control_signal_generator.cpp
ros2_demo_1/src/demo_startup/: CMakeLists.txt
ros2_demo_1/src/lidar_pkg/: CMakeLists.txt
ros2_demo_1/src/lidar_pkg/src/: pointcloud_processor.cpp  virtual_lidar.cpp
ros2_demo_1/src/logger/: CMakeLists.txt
ros2_demo_1/src/logger/src/: logger_node.cpp
work_space_1/install/: local_setup.sh  setup.sh
work_space_1/log/: latest_build
work_space_1/src/interference_node/: CMakeLists.txt  package.xml
work_space_1/src/interference_node/src/: interference_node.cpp
work_space_1/src/victim_node/: CMakeLists.txt  package.xml
work_space_1/src/victim_node/src/: victim_node.cpp
(+40 files in other folders)
